console error gone

--- a/web/contact.html
+++ b/web/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><!--PHP-->
 <head>
-	<title>联系我们</title>
+    <title>湖南金寿</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 	<meta name='renderer' content='webkit'>
 	<meta http-equiv='X-UA-Compatible' content='IE=Edge,chrome=1' >
@@ -27,10 +27,8 @@
         var SiteType = "1"; var CanDesign = "False"; var CanEditFront = 'False'; var SkinType = "3" || "2";var GridWidth = "1200px";
         var IsWeiXin = navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger';
 	</script>
-	<script src="./js/PageJs.js"></script>
-	<script>
-        loadStyleSheet('/share./css/jquery-ui-1.10.2.custom.min.css',CanDesign != 'True'); //非编辑模式下延时加载
-	</script>
+    <script src="js/my.js"></script>
+	<script src="js/jquery.min.js"></script>
 	</head>
 <body id="page_366102" class="module_bg_color">
 
@@ -134,9 +132,7 @@
 		<p style="text-align: left;"><span style="font-family: 微软雅黑;"><span style="color: rgb(255, 255, 255); font-size: 22px;">某某茶业有限公司</span><span style="color: rgb(255, 255, 255);"><strong><span style="font-size: 18px;"></span></strong><br/></span></span></p><p style="text-align: left;"><span style="text-align: center; color: rgb(255, 255, 255); font-family: 微软雅黑; font-size: 16px;">Tea &nbsp;Company&nbsp; Ltd .</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8814381'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -156,18 +152,12 @@
 		<p><span style="color: rgb(255, 255, 255); font-size: 18px; font-family: 微软雅黑;">全国客服热线：</span><span style="font-family: 黑体, SimHei;"><span style="color: rgb(255, 255, 255); font-size: 18px;"></span><span style="color: rgb(255, 255, 255); font-size: 18px;"></span></span><span style="font-family: arial, helvetica, sans-serif;"><strong><span style="color: rgb(255, 255, 255); font-size: 20px;">400-000-0000</span></strong></span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8815220'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8813388",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -277,47 +267,39 @@
 	  <div class="moveMenuRight iconfont icon-xiangyoujiantou"></div>
  </div>
  <div class="blank-solve">
-			<div id="Menu_510150_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+			<div id="Menu_510150_8815286" class="main-nav-item-group" >
 		<a href="index.html" target="_self" class="main-nav-item fontm OneRow">网站首页</a>
 				<div id="SubMenu_510150_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510151_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510151_8815286" class="main-nav-item-group" >
 		<a href="intro.html" target="_self" class="main-nav-item fontm OneRow">公司简介</a>
 				<div id="SubMenu_510151_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510152_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510152_8815286" class="main-nav-item-group" >
 		<a href="productlist.html" target="_self" class="main-nav-item fontm OneRow">茶品系列</a>
 				<div id="SubMenu_510152_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510153_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510153_8815286" class="main-nav-item-group" >
 		<a href="newslist.html" target="_self" class="main-nav-item fontm OneRow">行业资讯</a>
 				<div id="SubMenu_510153_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510154_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510154_8815286" class="main-nav-item-group" >
 		<a href="contact.html" target="_self" class="main-nav-item fontm OneRow main-nav-item-hover">联系我们</a>
 				<div id="SubMenu_510154_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
 	  </div>	
 </div>
-<script>
-addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
-	initModuleNavGiant("8815286","102");
-});
-</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8815277",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -439,18 +421,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="color: rgb(151, 72, 6);"><span style="font-size: 24px; font-family: arial, helvetica, sans-serif;">◇◆</span><span style="font-size: 24px;">&nbsp;联系我们</span></span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8907921'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8931921",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -469,7 +445,8 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 <div class="ModuleItem  StaticModule mhidden-xs mhidden-md mhidden-lg" wo="600" id="module_8932277"  >
 <div class="ModuleCustomFormGiant layout-101 layout-color-green module_8932277 clearfix" >
         <!-- 主体 -->
-    <div class='BodyCenter BodyCenter8932277 clearfix'><form id="customForm8932277" action="/index.php?c=Front/CustomForm&a=save" method="post" class="Form-containt">
+    <div class='BodyCenter BodyCenter8932277 clearfix'>
+        <form id="customForm8932277" method="post" class="Form-containt">
     <input type="hidden" name="submitType" value="ajax" />
     <input type="hidden" id="Handel8932277">
     <input type="hidden" name="FormID" value="11815">
@@ -512,7 +489,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 <div class="ModuleItem  StaticModule mhidden-sm" wo="600" id="module_8930367"  style="display: none;">
 <div class="ModuleCustomFormGiant layout-101 layout-color-green module_8930367 clearfix">
         <!-- 主体 -->
-    <div class='BodyCenter BodyCenter8930367 clearfix'><form id="customForm8930367" action="/index.php?c=Front/CustomForm&a=save" method="post" class="Form-containt">
+    <div class='BodyCenter BodyCenter8930367 clearfix'><form id="customForm8930367"  method="post" class="Form-containt">
     <input type="hidden" name="submitType" value="ajax" />
     <input type="hidden" id="Handel8930367">
     <input type="hidden" name="FormID" value="11809">
@@ -541,7 +518,6 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
             <p class="from-Describe Describ-text-color">验证码</p>
             <p class="clear_x">
                 <input class="VerificationCodeinput input-text-color" type="text" name="vCode" chname="验证码" isrequire="1" fieldtype="1" validatetype="1" />
-                <img class="VerificationCode vCodeImg" src="/index.php?c=validatecode">
                 <span class="changebtn refreshVCode">看不清？换一张</span>
             </p>
         </li>
@@ -551,13 +527,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
             </ul>
 </form>
 
-<script type="text/javascript">
-    addScript('/skinp/modules/ModuleCustomFormGiant/customformgiant.js', function () {
-        initCustomFormGiant('8930367', '101', {
-                        lang: {"plz_enter":"\u8bf7\u586b\u5199","plz_select":"\u8bf7\u9009\u62e9","upload_incorrect_type_file":"\u6587\u4ef6\u683c\u5f0f\u4e0d\u7b26\u5408","uploading_and_wait_a_moment":"\u4e0a\u4f20\u4e2d\uff0c\u8bf7\u7a0d\u540e...","n_items_have_been_selected":"\u5df2\u9009\u62e9{n}\u9879","select2":"\u786e\u5b9a","plz_enter_numbers":"\u8bf7\u8f93\u5165\u6570\u5b57","please_enter":"\u8bf7\u8f93\u5165","mobileformat":"\u624b\u673a\u53f7\u7801\u683c\u5f0f\u4e0d\u6b63\u786e\uff01","emailfomart":"\u7535\u5b50\u90ae\u7bb1\u683c\u5f0f\u4e0d\u6b63\u786e\uff01","plz_enter_the_correct_phone_number":"\u8bf7\u586b\u5199\u6b63\u786e\u7684\u7535\u8bdd\u53f7\u7801\uff0c\u683c\u5f0f\u5982\u533a\u53f7-\u7535\u8bdd\u53f7\u7801","plz_enter_the_correct_tel_or_mobile_number":"\u8bf7\u586b\u5199\u5ea7\u673a\u683c\u5f0f\uff1a\u533a\u53f7-\u7535\u8bdd\u53f7\u7801\u6216\u624b\u673a\u53f7\u7801","plz_enter_the_correct_idcard_number":"\u8bf7\u586b\u5199\u6b63\u786e\u7684\u8eab\u4efd\u8bc1","plz_select_one_of_these_items":"\u8bf7\u9009\u62e9\u5176\u4e2d\u4e00\u9879","plz_select_at_least_one_item":"\u8bf7\u81f3\u5c11\u9009\u62e9\u4e00\u9879","plz_select_a_file_to_upload":"\u8bf7\u9009\u62e9\u6587\u4ef6\u4e0a\u4f20","plz_select_the_region":"\u8bf7\u9009\u62e9\u5730\u533a","plz_select_the_date":"\u8bf7\u9009\u62e9\u65e5\u671f","the_date_is_not_in_the_correct_format":"\u65e5\u671f\u683c\u5f0f\u4e0d\u6b63\u786e","plz_fill_in_the_item":"\u8be5\u9879\u4e0d\u80fd\u4e3a\u7a7a","form_submitting":"\u8868\u5355\u63d0\u4ea4\u4e2d\uff0c\u8bf7\u7a0d\u5019...","submit_success":"\u63d0\u4ea4\u6210\u529f","submit_failed":"\u63d0\u4ea4\u5931\u8d25"}
-        });
-    });
-</script></div>
+</div>
 </div>
 
 </div>
@@ -569,9 +539,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<div><p style="color: rgb(106, 106, 106); font-size: 16px; line-height: 1.333; font-weight: bold;"><span style="color: rgb(151, 72, 6);">深圳XX茶叶有限公司</span></p><p style="color: rgb(153, 153, 153); padding: 10px 0px 17px; font-size: 12px;"><span style="color: rgb(151, 72, 6);">Website construction culture Communication Co.，Ltd.</span></p></div><div style="color: rgb(106, 106, 106); font-size: 12px; line-height: 1.846; border: 0px;"><p style="padding-bottom: 5px;"><span style="color: rgb(151, 72, 6);">总部地址：深圳地区XX分区5A写字楼8-88室</span></p><p><span style="color: rgb(151, 72, 6);">总部电话：400-000-0000</span></p><p><span style="font-size: 12px; color: rgb(151, 72, 6);">分部电话：400-000-8888</span></p><p><span style="color: rgb(151, 72, 6);">电子邮箱：website@qq.com</span></p></div>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8932084'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -583,9 +551,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<div><p style="color: rgb(106, 106, 106); font-size: 16px; line-height: 1.333; font-weight: bold;"><span style="color: rgb(151, 72, 6);">深圳XX茶叶有限公司</span></p><p><span style="font-size: 12px; color: rgb(151, 72, 6);">Website construction culture Communication Co.，Ltd.</span></p><p><span style="font-size: 12px; color: rgb(151, 72, 6);">总部地址：深圳地区XX分区5A写字楼8-88室</span></p><p><span style="font-size: 12px; color: rgb(151, 72, 6);">总部电话：400-000-0000</span></p></div><div><p><span style="font-size: 12px; color: rgb(151, 72, 6);">电子邮箱：website@qq.com</span></p></div>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8932268'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -597,9 +563,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<div><p style="color: rgb(106, 106, 106); font-size: 16px; line-height: 1.333; font-weight: bold;"><span style="color: rgb(151, 72, 6);">深圳XX茶叶有限公司</span></p><p style="color: rgb(153, 153, 153); padding: 10px 0px 17px; font-size: 12px;"><span style="color: rgb(151, 72, 6);">Website construction culture Communication Co.，Ltd.</span></p></div><div style="color: rgb(106, 106, 106); font-size: 12px; line-height: 1.846; border: 0px;"><p style="padding-bottom: 5px;"><span style="color: rgb(151, 72, 6);">总部地址：深圳地区XX分区5A写字楼8-88室</span></p><p><span style="color: rgb(151, 72, 6);">总部电话：400-000-0000</span></p><p><span style="color: rgb(151, 72, 6);">电子邮箱：website@qq.com</span></p></div>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8930194'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -612,11 +576,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8907926",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -638,9 +598,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">地点：某某省某某市某某区某某街道X号</span></div><div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">电话：040-88888XXX &nbsp; 040-666666XX &nbsp; &nbsp;&nbsp;</span></div><div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">邮箱：&nbsp;&nbsp;&nbsp;Tea Company ltd@163.COM</span></div>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816264'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -659,18 +617,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="font-size: 12px; text-align: center; color: rgb(255, 255, 255);">COPYRIGHT 版权所有 ©某某茶行公司 &nbsp; 沪ICP备XXXXXX号-X</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816276'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8816274",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -700,9 +652,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p><span style="font-size: 14px; line-height: 150%; color: rgb(255, 255, 255);">地点：某某省某某市某某区某某街道某某号X座XXX</span></p><p><span style="color: rgb(255, 255, 255);">电话：040-88888XXX &nbsp; 040-666666XX&nbsp;</span></p><p><span style="color: rgb(255, 255, 255);">邮箱：tea company ltd@163.COM &nbsp;</span></p><p><span style="color: rgb(255, 255, 255);">COPYRIGHT 版权所有 &copy;</span><span style="color: rgb(255, 255, 255);"><span style="line-height: 150%; color: rgb(0, 0, 0);"> &nbsp;</span>某某茶行有限公司 &nbsp; 沪ICP备XXXXXX号</span><br/></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8815831'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -729,9 +679,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="color: rgb(255, 255, 255); font-size: 16px;">某某茶业有限公司</span></p><p style="text-align: center;"><span style="color: rgb(255, 255, 255); font-size: 12px;">Tea &nbsp;Company&nbsp; Ltd .</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816250'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -745,21 +693,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 					</div>
 	
 </div>
-<!-- 通栏模块 -->
-<script type="text/javascript">
-    var rawUrl="";
-    var Page="YouZhan.SiteFront.CommonPage_366102";
-    var PageID="366102";
-    var PageConf = {"EnableBodyTopZone":true,"EnableBodyFootZone":true,"EnableBodyLeftZone":false,"EnableBodyRightZone":false,"EnableBodyMain1Zone":true,"EnableBodyMain2Zone":false,"EnableBodyMain3Zone":false,"EnableBodyMain4Zone":false,"HeaderZonePositionType":0,"FooterZonePositionType":0,"BodyTopZonePositionType":0,"BodyFootZonePositionType":0,"BodyLeftZonePositionType":0,"BodyRightZonePositionType":0,"BodyMain1ZonePositionType":0,"BodyMain2ZonePositionType":0,"BodyMain3ZonePositionType":0,"BodyMain4ZonePositionType":0,"EnableFreeMain":true,"EnableBodyFullPage":true};
-    var SCRIPT_NAME="/index.php";
-    var SiteType="1";
-    var IsUserCenter = "0";
-    var hasFullSwitch = 0;
-    var isPlatformVersion = "1";
-    if(navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion .split(";")[1].replace(/[ ]/g,"")=="MSIE6.0" || navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion .split(";")[1].replace(/[ ]/g,"")=="MSIE7.0" || navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion .split(";")[1].replace(/[ ]/g,"")=="MSIE8.0"){
-		checkBowerTip();
-	}
-</script>
+
 
 <!-- 加载设计界面所用的脚本和css -->
 	<style>
@@ -772,23 +706,8 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 	if("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1){
 		$('#HeaderContainer,#FooterContainer').remove();
 	}
-    if (!IsWeiXin){
-        addScript('./js/floaters.js',function(){
-            addScript('/index.php?c=Front/IMPanel',null);
-        });
-        (function(){ var bp = document.createElement('script'); bp.src = ''; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(bp, s);})();
-    }else{
-        addScript('/scripts/jweixin-1.0.0.js?ddd');
-        addScript('/scripts/party/weixinshare.js?rrr');
-    }
-    $(window).load(function(){
-        if (IsWeiXin) {
-            var match = window.location.href.match(/#invite(\d+)/i);
-            var barurl = "/index.php?c=front/UserBar";
-            if(match && match[1]) barurl += "&invite="+match[1];
-            if ("YouZhan.SiteFront.CommonPage_366102" == "YouZhan.SiteFront.HomeIndex" || "YouZhan.SiteFront.CommonPage_366102" == "YouZhan.SiteFront.NewsDetail" || "YouZhan.SiteFront.CommonPage_366102" == "YouZhan.SiteFront.ProductDetail") $("#userbar").load(barurl);
-        }
-    });
+
+
 </script>
 
 </body>
