--- a/web/news1.html
+++ b/web/news1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>XX茶叶获评国家农业产业化重点龙头企业</title>
+	<title>湖南金寿</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 	<meta name='renderer' content='webkit'>
 	<meta http-equiv='X-UA-Compatible' content='IE=Edge,chrome=1' >
@@ -27,10 +27,8 @@
         var SiteType = "1"; var CanDesign = "False"; var CanEditFront = 'False'; var SkinType = "3" || "2";var GridWidth = "1200px";
         var IsWeiXin = navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger';
 	</script>
-	<script src="./js/PageJs.js"></script>
-	<script>
-        loadStyleSheet('/share./css/jquery-ui-1.10.2.custom.min.css',CanDesign != 'True'); //非编辑模式下延时加载
-	</script>
+	<script src="js/my.js"></script>
+	<script src="js/jquery.min.js"></script>
 	</head>
 <body id="page_366512" class="module_bg_color">
 
@@ -134,9 +132,7 @@
 		<p style="text-align: left;"><span style="font-family: 微软雅黑;"><span style="color: rgb(255, 255, 255); font-size: 22px;">某某茶业有限公司</span><span style="color: rgb(255, 255, 255);"><strong><span style="font-size: 18px;"></span></strong><br/></span></span></p><p style="text-align: left;"><span style="text-align: center; color: rgb(255, 255, 255); font-family: 微软雅黑; font-size: 16px;">Tea &nbsp;Company&nbsp; Ltd .</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8814381'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -156,18 +152,12 @@
 		<p><span style="color: rgb(255, 255, 255); font-size: 18px; font-family: 微软雅黑;">全国客服热线：</span><span style="font-family: 黑体, SimHei;"><span style="color: rgb(255, 255, 255); font-size: 18px;"></span><span style="color: rgb(255, 255, 255); font-size: 18px;"></span></span><span style="font-family: arial, helvetica, sans-serif;"><strong><span style="color: rgb(255, 255, 255); font-size: 20px;">400-000-0000</span></strong></span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8815220'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8813388",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -277,47 +267,39 @@
 	  <div class="moveMenuRight iconfont icon-xiangyoujiantou"></div>
  </div>
  <div class="blank-solve">
-	<div id="Menu_510150_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+	<div id="Menu_510150_8815286" class="main-nav-item-group" >
 		<a href="index.html" target="_self" class="main-nav-item fontm OneRow">网站首页</a>
 		<div id="SubMenu_510150_8815286" class="sub-nav-item-group">
 		</div>
 	</div>
-	 <div id="Menu_510151_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+	 <div id="Menu_510151_8815286" class="main-nav-item-group" >
 		 <a href="intro.html" target="_self" class="main-nav-item fontm OneRow">公司简介</a>
 		 <div id="SubMenu_510151_8815286" class="sub-nav-item-group">
 		 </div>
 	 </div>
-	 <div id="Menu_510152_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+	 <div id="Menu_510152_8815286" class="main-nav-item-group" >
 		 <a href="productlist.html" target="_self" class="main-nav-item fontm OneRow">茶品系列</a>
 		 <div id="SubMenu_510152_8815286" class="sub-nav-item-group">
 		 </div>
 	 </div>
-	 <div id="Menu_510153_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+	 <div id="Menu_510153_8815286" class="main-nav-item-group" >
 		 <a href="newslist.html" target="_self" class="main-nav-item fontm OneRow main-nav-item-hover">行业资讯</a>
 		 <div id="SubMenu_510153_8815286" class="sub-nav-item-group">
 		 </div>
 	 </div>
-	 <div id="Menu_510154_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+	 <div id="Menu_510154_8815286" class="main-nav-item-group" >
 		 <a href="contact.html" target="_self" class="main-nav-item fontm OneRow">联系我们</a>
 		 <div id="SubMenu_510154_8815286" class="sub-nav-item-group">
 		 </div>
 	</div>
 	  </div>	
 </div>
-<script>
-addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
-	initModuleNavGiant("8815286","102");
-});
-</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8815277",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -457,55 +439,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 
 
 
-<script>
 
-
-	$('.NewsContent img:eq(0)').clone().hide().prependTo('body');
-	changeFontSize($('#module_8850261'));
-
-	loadStyleSheet('/scripts/wookmark/css/lightgallery.min.css');
-	addScript('/scripts/wookmark/lightgallery.min.js',function(){
-		addScript('/scripts/wookmark/lg-fullscreen.min.js');
-		addScript('/scripts/wookmark/lg-thumbnail.min.js');
-		addScript('/scripts/wookmark/lg-zoom.min.js');
-		addScript('/skinp/common/mobile/js/zepto.min.js');
-		
-		
-		$('.NewsContent img').off('click').on('click', function(){
-			var list = [];
-			$('.NewsContent img').each(function(){
-				var obj = {
-					src: $(this).prop('src'),
-					thumb: $(this).prop('src'),
-					subHtml: $(this).prop('alt')
-				};
-				list.push(obj);
-			});
-			$(this).lightGallery({
-				index: $(this).index('.NewsContent img'),
-				dynamic: true,
-				thumbnail: true,
-				dynamicEl: list
-			});
-		});
-		
-	});
-	
-	
-    //pc的分享
-    $('.share-news-pc').find('.shareitem').off('click').on('click',function(){
-        var thisshare = $(this).attr('data-cmd');
-        $('.bdsharebuttonbox img[data-cmd='+thisshare+']').click();
-    })
-     //移动的分享
-	$('.share-news-mobile').click(function(){
-		$('.ShareIcon').click();
-	})
-	
-
-
-	
-	</script>
 </div>
 </div>
 
@@ -518,24 +452,11 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 	<a href="javascript:void(0)">分享<br>新闻</a>
 </div>
 <div id='divShare0' class='ModuleShareContainer' style='display:none;position:fixed;bottom:0;z-index: 100000;'>
-<div class="bdsharebuttonbox">
-	<div class='title' onclick="$('#divShare0').toggle(300)"><b>推荐给朋友</b>
-		<div class='close'><i class="fa fa-close"></i></div>
-	</div>
-	<div class='shareitem' data-app="weixin" title="分享到微信"><img data-cmd="weixin" src='/images/shareicons/weixin.gif' width='40'><div>微信好友</div></div>
-	<div class='shareitem' data-app="QQ" title="分享给QQ好友"><img data-cmd="sqq" src='/images/shareicons/qq.gif' width='40'><div>QQ好友</div></div>
-	<div class='shareitem' data-app="QZone" title="分享到QQ空间"><img data-cmd="qzone" src='/images/shareicons/qzone.gif' width='40'><div>QQ空间</div></div>
-	<div class='shareitem' data-app="sinaWeibo" title="分享到新浪微博"><img data-cmd="tsina" src='/images/shareicons/weibo.gif' width='40'><div>新浪微博</div></div>
-	<div class='shareitem' title="分享到腾讯微博"><img data-cmd="tqq" src='/images/shareicons/tcn.gif' width='40'><div>腾讯微博</div></div>
-	<div class='shareitem' title="分享到朋友网"><img data-cmd="tqf" src='/images/shareicons/pengyou.gif' width='40'><div>腾讯朋友</div></div>
-	<div class='shareitem' title="分享到人人网"><img data-cmd="renren" src='/images/shareicons/renren.gif' width='40'><div>人人网</div></div>
-	<div class='shareitem' id='copyurl' title="复制分享网址"><img src='/images/shareicons/copy.gif' width='40'><div>复制网址</div></div>
-</div>
+
 </div>
 <div id='divShareA0' style='display:none;'></div>
 <div id='divTipsModal0' style='display:none;z-index:999999' class="ShareTipsModal modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
 	<div class="jiantou">
-		<img src="/images/PartyImage/jiantou.png" >
 	</div>
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -547,7 +468,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 </div>
 </div>
 </div>
-<script id='5A138E30D3014EA0A4464D170F50AAA3'>computeZoneHeight($('#5A138E30D3014EA0A4464D170F50AAA3').parent());</script>			</div>
+</div>
 		</div>
 	</div>
 	
@@ -564,9 +485,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">地点：某某省某某市某某区某某街道X号</span></div><div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">电话：040-88888XXX &nbsp; 040-666666XX &nbsp; &nbsp;&nbsp;</span></div><div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">邮箱：&nbsp;&nbsp;&nbsp;Tea Company ltd@163.COM</span></div>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816264'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -585,18 +504,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="font-size: 12px; text-align: center; color: rgb(255, 255, 255);">COPYRIGHT 版权所有 ©某某茶行公司 &nbsp; 沪ICP备XXXXXX号-X</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816276'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8816274",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -626,9 +539,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p><span style="font-size: 14px; line-height: 150%; color: rgb(255, 255, 255);">地点：某某省某某市某某区某某街道某某号X座XXX</span></p><p><span style="color: rgb(255, 255, 255);">电话：040-88888XXX &nbsp; 040-666666XX&nbsp;</span></p><p><span style="color: rgb(255, 255, 255);">邮箱：tea company ltd@163.COM &nbsp;</span></p><p><span style="color: rgb(255, 255, 255);">COPYRIGHT 版权所有 &copy;</span><span style="color: rgb(255, 255, 255);"><span style="line-height: 150%; color: rgb(0, 0, 0);"> &nbsp;</span>某某茶行有限公司 &nbsp; 沪ICP备XXXXXX号</span><br/></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8815831'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -655,9 +566,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="color: rgb(255, 255, 255); font-size: 16px;">某某茶业有限公司</span></p><p style="text-align: center;"><span style="color: rgb(255, 255, 255); font-size: 12px;">Tea &nbsp;Company&nbsp; Ltd .</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816250'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -687,14 +596,6 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 	if("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1){
 		$('#HeaderContainer,#FooterContainer').remove();
 	}
-    if (!IsWeiXin){
-        addScript('./js/floaters.js',function(){
-        });
-        (function(){ var bp = document.createElement('script'); bp.src = ''; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(bp, s);})();
-    }else{
-        addScript('/scripts/jweixin-1.0.0.js?ddd');
-        addScript('/scripts/party/weixinshare.js?rrr');
-    }
 </script>
 
 </body>
