--- a/web/productlist.html
+++ b/web/productlist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><!--PHP-->
 <head>
-	<title>茶品系列</title>
+    <title>湖南金寿</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 	<meta name='renderer' content='webkit'>
 	<meta http-equiv='X-UA-Compatible' content='IE=Edge,chrome=1' >
@@ -27,10 +27,8 @@
         var SiteType = "1"; var CanDesign = "False"; var CanEditFront = 'False'; var SkinType = "3" || "2";var GridWidth = "1200px";
         var IsWeiXin = navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger';
 	</script>
-	<script src="./js/PageJs.js"></script>
-	<script>
-        loadStyleSheet('/share./css/jquery-ui-1.10.2.custom.min.css',CanDesign != 'True'); //非编辑模式下延时加载
-	</script>
+    <script src="js/my.js"></script>
+	<script src="js/jquery.min.js"></script>
 	</head>
 <body id="page_366100" class="module_bg_color">
 
@@ -134,9 +132,7 @@
 		<p style="text-align: left;"><span style="font-family: 微软雅黑;"><span style="color: rgb(255, 255, 255); font-size: 22px;">某某茶业有限公司</span><span style="color: rgb(255, 255, 255);"><strong><span style="font-size: 18px;"></span></strong><br/></span></span></p><p style="text-align: left;"><span style="text-align: center; color: rgb(255, 255, 255); font-family: 微软雅黑; font-size: 16px;">Tea &nbsp;Company&nbsp; Ltd .</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8814381'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -156,18 +152,11 @@
 		<p><span style="color: rgb(255, 255, 255); font-size: 18px; font-family: 微软雅黑;">全国客服热线：</span><span style="font-family: 黑体, SimHei;"><span style="color: rgb(255, 255, 255); font-size: 18px;"></span><span style="color: rgb(255, 255, 255); font-size: 18px;"></span></span><span style="font-family: arial, helvetica, sans-serif;"><strong><span style="color: rgb(255, 255, 255); font-size: 20px;">400-000-0000</span></strong></span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8815220'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8813388",{isFloat:"0"});
-    });
-</script>
 </div>
 </div>
 
@@ -277,47 +266,39 @@
 	  <div class="moveMenuRight iconfont icon-xiangyoujiantou"></div>
  </div>
  <div class="blank-solve">
-			<div id="Menu_510150_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+			<div id="Menu_510150_8815286" class="main-nav-item-group" >
 		<a href="index.html" target="_self" class="main-nav-item fontm OneRow">网站首页</a>
 				<div id="SubMenu_510150_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510151_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510151_8815286" class="main-nav-item-group" >
 		<a href="intro.html" target="_self" class="main-nav-item fontm OneRow">公司简介</a>
 				<div id="SubMenu_510151_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510152_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510152_8815286" class="main-nav-item-group" >
 		<a href="productlist.html" target="_self" class="main-nav-item fontm OneRow main-nav-item-hover">茶品系列</a>
 				<div id="SubMenu_510152_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510153_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510153_8815286" class="main-nav-item-group" >
 		<a href="newslist.html" target="_self" class="main-nav-item fontm OneRow">行业资讯</a>
 				<div id="SubMenu_510153_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
-		<div id="Menu_510154_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
+		<div id="Menu_510154_8815286" class="main-nav-item-group" >
 		<a href="contact.html" target="_self" class="main-nav-item fontm OneRow">联系我们</a>
 				<div id="SubMenu_510154_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
 	  </div>	
 </div>
-<script>
-addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
-	initModuleNavGiant("8815286","102");
-});
-</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8815277",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -439,9 +420,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="color: rgb(151, 72, 6);"><span style="font-size: 24px; font-family: arial, helvetica, sans-serif;">◇◆</span><span style="font-size: 24px;">&nbsp;精选系列</span></span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8907774'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -489,18 +468,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 			</div>
 
 </div>
-<script>
-	changeFontSize($('#module_8937630'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8907591",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -516,18 +489,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="color: rgb(151, 72, 6);"><span style="font-size: 24px; font-family: arial, helvetica, sans-serif;">◇◆</span><span style="font-size: 24px;">&nbsp;茶品分类</span></span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8835741'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8950333",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -545,11 +512,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
         <li class="main-class-item"><a class="main-class-text OneRow" href="javascript:;" target="_self">茶食品系列</a></li>
         <li class="main-class-item"><a class="main-class-text OneRow" href="javascript:;" target="_self">茶具系列</a></li>
     </ul>
-<script type="text/javascript">
-    addScript('/skinp/modules/ModuleCommonClsGiant/commoncls.js', function () {
-        initCommonClsGiant(8835468,'105')
-    });
-</script></div>
+</div>
 </div>
 
 </div>
@@ -664,24 +627,14 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
                             </div>
                     </li>
         </ul>
-        <script>
-    addScript('/skinp/modules/ModuleProductListGiant/productlist.js',function(){
-        initProductListGiant("8835752","109",{
-            'PageLink' : "/Product/0.html?PageNo={PageNo}&ClassID=0&responseModuleId=8835752"
-        });
-    });
-</script>
+
 
 </div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8835739",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -703,9 +656,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">地点：某某省某某市某某区某某街道X号</span></div><div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">电话：040-88888XXX &nbsp; 040-666666XX &nbsp; &nbsp;&nbsp;</span></div><div style="text-align: center;"><span style="color: rgb(255, 255, 255); line-height: 150%; font-size: 14px;">邮箱：&nbsp;&nbsp;&nbsp;Tea Company ltd@163.COM</span></div>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816264'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -724,18 +675,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="font-size: 12px; text-align: center; color: rgb(255, 255, 255);">COPYRIGHT 版权所有 ©某某茶行公司 &nbsp; 沪ICP备XXXXXX号-X</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816276'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8816274",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -765,9 +710,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p><span style="font-size: 14px; line-height: 150%; color: rgb(255, 255, 255);">地点：某某省某某市某某区某某街道某某号X座XXX</span></p><p><span style="color: rgb(255, 255, 255);">电话：040-88888XXX &nbsp; 040-666666XX&nbsp;</span></p><p><span style="color: rgb(255, 255, 255);">邮箱：tea company ltd@163.COM &nbsp;</span></p><p><span style="color: rgb(255, 255, 255);">COPYRIGHT 版权所有 &copy;</span><span style="color: rgb(255, 255, 255);"><span style="line-height: 150%; color: rgb(0, 0, 0);"> &nbsp;</span>某某茶行有限公司 &nbsp; 沪ICP备XXXXXX号</span><br/></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8815831'));
-	</script></div>
+</div>
 </div>
 
 </div>
@@ -794,18 +737,12 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		<p style="text-align: center;"><span style="color: rgb(255, 255, 255); font-size: 16px;">某某茶业有限公司</span></p><p style="text-align: center;"><span style="color: rgb(255, 255, 255); font-size: 12px;">Tea &nbsp;Company&nbsp; Ltd .</span></p>
 	</div>
 </div>
-<script>
-	changeFontSize($('#module_8816250'));
-	</script></div>
+</div>
 </div>
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8815836",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -842,23 +779,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 	if("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1){
 		$('#HeaderContainer,#FooterContainer').remove();
 	}
-    if (!IsWeiXin){
-        addScript('./js/floaters.js',function(){
-            addScript('/index.php?c=Front/IMPanel',null);
-        });
-        (function(){ var bp = document.createElement('script'); bp.src = ''; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(bp, s);})();
-    }else{
-        addScript('/scripts/jweixin-1.0.0.js?ddd');
-        addScript('/scripts/party/weixinshare.js?rrr');
-    }
-    $(window).load(function(){
-        if (IsWeiXin) {
-            var match = window.location.href.match(/#invite(\d+)/i);
-            var barurl = "/index.php?c=front/UserBar";
-            if(match && match[1]) barurl += "&invite="+match[1];
-            if ("YouZhan.SiteFront.CommonPage_366100" == "YouZhan.SiteFront.HomeIndex" || "YouZhan.SiteFront.CommonPage_366100" == "YouZhan.SiteFront.NewsDetail" || "YouZhan.SiteFront.CommonPage_366100" == "YouZhan.SiteFront.ProductDetail") $("#userbar").load(barurl);
-        }
-    });
+
 </script>
 
 </body>
