--- a/web/product1.html
+++ b/web/product1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><!--PHP-->
 <head>
-    <title>乌龙茶 黄金桂</title>
+    <title>湖南金寿</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name='renderer' content='webkit'>
     <meta http-equiv='X-UA-Compatible' content='IE=Edge,chrome=1'>
@@ -33,10 +33,8 @@
         var GridWidth = "1200px";
         var IsWeiXin = navigator.userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger';
     </script>
-    <script src="./js/PageJs.js"></script>
-    <script>
-        loadStyleSheet('./css/jquery-ui-1.10.2.custom.min.css', CanDesign != 'True'); //非编辑模式下延时加载
-    </script>
+    <script src="js/my.js"></script>
+    <script src="js/jquery.min.js"></script>
 </head>
 <body id="page_366455" class="module_bg_color">
 
@@ -129,10 +127,6 @@
                         <div class='BodyCenter BodyCenter8813388 clearfix'>
                             <div class='ModuleGridContainer  ModuleGridContainer8813388' gridswidthmode='2'>
                                 <div class='row ModuleSubContainer'>
-                                    <div class="gridBgVideo noBgVideo">
-                                        <video src="" class="bgVideo" autoplay="autoplay" loop="loop"></video>
-                                        <div class="bgVideoMask"></div>
-                                    </div>
                                     <div id='Sub8813388_1'
                                          class='ModuleContainer SubContainer ModuleGridItem     col-xs-12 col-sm-12 col-md-1 col-lg-1'
                                          positiontype='2' ismodulecontainer='true'>
@@ -171,9 +165,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        changeFontSize($('#module_8814381'));
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -217,9 +209,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        changeFontSize($('#module_8815220'));
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -339,10 +329,6 @@
                         <div class='BodyCenter BodyCenter8815277 clearfix'>
                             <div class='ModuleGridContainer  ModuleGridContainer8815277' gridswidthmode='2'>
                                 <div class='row ModuleSubContainer'>
-                                    <div class="gridBgVideo noBgVideo">
-                                        <video src="" class="bgVideo" autoplay="autoplay" loop="loop"></video>
-                                        <div class="bgVideoMask"></div>
-                                    </div>
                                     <div id='Sub8815277_1'
                                          class='ModuleContainer SubContainer ModuleGridItem     col-xs-12 col-sm-12 col-md-12 col-lg-12'
                                          positiontype='2' ismodulecontainer='true'>
@@ -357,8 +343,7 @@
                                                         </div>
                                                         <div class="blank-solve">
                                                             <div id="Menu_510150_8815286" class="main-nav-item-group"
-                                                                 onmouseover="showSubMenu(this)"
-                                                                 onmouseout="hideSubMenu(this, event)">
+                                                                 >
                                                                 <a href="index.html" target="_self"
                                                                    class="main-nav-item fontm OneRow">网站首页</a>
                                                                 <div id="SubMenu_510150_8815286"
@@ -366,8 +351,7 @@
                                                                 </div>
                                                             </div>
                                                             <div id="Menu_510151_8815286" class="main-nav-item-group"
-                                                                 onmouseover="showSubMenu(this)"
-                                                                 onmouseout="hideSubMenu(this, event)">
+                                                                >
                                                                 <a href="intro.html" target="_self"
                                                                    class="main-nav-item fontm OneRow">公司简介</a>
                                                                 <div id="SubMenu_510151_8815286"
@@ -375,8 +359,7 @@
                                                                 </div>
                                                             </div>
                                                             <div id="Menu_510152_8815286" class="main-nav-item-group"
-                                                                 onmouseover="showSubMenu(this)"
-                                                                 onmouseout="hideSubMenu(this, event)">
+                                                                >
                                                                 <a href="productlist.html" target="_self"
                                                                    class="main-nav-item fontm OneRow main-nav-item-hover">茶品系列</a>
                                                                 <div id="SubMenu_510152_8815286"
@@ -384,8 +367,7 @@
                                                                 </div>
                                                             </div>
                                                             <div id="Menu_510153_8815286" class="main-nav-item-group"
-                                                                 onmouseover="showSubMenu(this)"
-                                                                 onmouseout="hideSubMenu(this, event)">
+                                                               >
                                                                 <a href="newslist.html" target="_self"
                                                                    class="main-nav-item fontm OneRow">行业资讯</a>
                                                                 <div id="SubMenu_510153_8815286"
@@ -393,8 +375,7 @@
                                                                 </div>
                                                             </div>
                                                             <div id="Menu_510154_8815286" class="main-nav-item-group"
-                                                                 onmouseover="showSubMenu(this)"
-                                                                 onmouseout="hideSubMenu(this, event)">
+                                                                >
                                                                 <a href="contact.html" target="_self"
                                                                    class="main-nav-item fontm OneRow">联系我们</a>
                                                                 <div id="SubMenu_510154_8815286"
@@ -403,11 +384,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        addScript('/skinp/modules/ModuleNavGiant/menu.js', function () {
-                                                            initModuleNavGiant("8815286", "102");
-                                                        });
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -552,8 +529,6 @@
                             <script type="text/javascript" src="./js/qrcode.js"></script>
                             <script type="text/javascript" src="./js/jquery.qrcode.js"></script>
                             <script type="text/javascript" src="./js/clipboard.min.js"></script>
-                            <script type="text/javascript" src="./js/video.min.js"></script>
-                            <link rel="stylesheet" type="text/css" href='./css/video-js.css'></link>
                             <script type="text/javascript">
                                 $(function () {
                                     // 给微信分享用的
@@ -573,18 +548,6 @@
                                             <div id="pro-bigPic" class="swiper-container gallery-top" rel="">
 
                                                 <div class="ProVideoDiv" style="display:none">
-                                                    <video id="example_video_1" class="video-js vjs-default-skin"
-                                                           controls preload="none" style='width:100%;height:100%'
-                                                           x5-playsinline="" playsinline="" webkit-playsinline=""
-                                                           data-setup="{}">
-                                                        <source src="" type='video/mp4'/>
-                                                        <track kind="captions" src="demo.captions.vtt" srclang="en"
-                                                               label="English"></track>
-                                                        <!-- Tracks need an ending tag thanks to IE9 -->
-                                                        <track kind="subtitles" src="demo.captions.vtt" srclang="en"
-                                                               label="English"></track>
-                                                        <!-- Tracks need an ending tag thanks to IE9 -->
-                                                    </video>
                                                     <!--<video class='ProVideo'  controls='controls' src=''></video>-->
                                                     <i class='iconfont icon-guanbi'
                                                        style='position:absolute;right:7%;top:0%;font-size:18px;color:white;display:none;'></i>
@@ -983,14 +946,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <script>
-                                addScript('/skinp/modules/ModuleProductDetailGiant/details.js', function () {
-                                    $(function () {
-                                        details('8847732', '101', '0', '[]', '[]', '');
-                                        initProductDetailQrcode('扫描二维码');
-                                    });
-                                });
-                            </script>
+
                         </div>
                     </div>
 
@@ -1052,7 +1008,6 @@
                                  class="ShareTipsModal modal fade bs-example-modal-lg" tabindex="-1" role="dialog"
                                  aria-labelledby="myLargeModalLabel">
                                 <div class="jiantou">
-                                    <img src="/images/PartyImage/jiantou.png">
                                 </div>
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content">
@@ -1065,7 +1020,6 @@
                         </div>
                     </div>
                 </div>
-                <script id='84A5D8D1067184CD4D28C5787E513577'>computeZoneHeight($('#84A5D8D1067184CD4D28C5787E513577').parent());</script>
             </div>
         </div>
     </div>
@@ -1106,9 +1060,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        changeFontSize($('#module_8816264'));
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -1137,9 +1089,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        changeFontSize($('#module_8816276'));
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -1171,7 +1121,6 @@
                             <div class='ModuleGridContainer  ModuleGridContainer8815836' gridswidthmode='2'>
                                 <div class='row ModuleSubContainer'>
                                     <div class="gridBgVideo noBgVideo">
-                                        <video src="" class="bgVideo" autoplay="autoplay" loop="loop"></video>
                                         <div class="bgVideoMask"></div>
                                     </div>
                                     <div id='Sub8815836_1'
@@ -1208,9 +1157,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        changeFontSize($('#module_8815831'));
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -1256,9 +1203,7 @@
                                                             </p>
                                                         </div>
                                                     </div>
-                                                    <script>
-                                                        changeFontSize($('#module_8816250'));
-                                                    </script>
+
                                                 </div>
                                             </div>
 
@@ -1329,20 +1274,7 @@
     if ("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1) {
         $('#HeaderContainer,#FooterContainer').remove();
     }
-    if (!IsWeiXin) {
-        addScript('./js/floaters.js', function () {
 
-        });
-        (function () {
-            var bp = document.createElement('script');
-            bp.src = '';
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(bp, s);
-        })();
-    } else {
-        addScript('/scripts/jweixin-1.0.0.js?ddd');
-        addScript('/scripts/party/weixinshare.js?rrr');
-    }
 </script>
 
 </body>
